--- a/src/main/resources/rest-messages.properties
+++ b/src/main/resources/rest-messages.properties
@@ -1,4 +1,21 @@
+# Dib
+rest.description.dib = A collection of dibs
+rest.description.dib.startDate = The day the dib starts
+rest.description.dib.startTime = The time the dib starts
+rest.description.dib.endDate = The day the dib ends
+rest.description.dib.endTime = The time the dib ends
+rest.description.dib.comment = An optional short comment
+
 # Item
 rest.description.item = A collection of items
 rest.description.item.title = Name of the item
 rest.description.item.description = Short description of the course
+
+# Plan
+rest.description.plan = A collection of plans
+rest.description.plan.title = Name of the plan
+rest.description.plan.maxItems = The maximum number of items a user can own
+
+# User
+rest.description.user = A collection of users
+rest.description.user.username = Username of the user
