Migration to local MySQL instance

--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -6,3 +6,9 @@ spring.data.rest.default-page-size = 20
 
 # AWS EBS requires acrivity on Port 5000
 server.port = 5000
+
+# Database info
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://localhost:3306/dib
+spring.datasource.username=root
+spring.datasource.password=P@ssw0rd
