--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,9 @@ spring.data.rest.default-page-size = 20
 server.port = 5000
 
 # Database info
+spring.datasource.url=jdbc:mysql://dib.cg6mqtvmiilg.us-east-1.rds.amazonaws.com:3306/dib
+spring.datasource.username=cobelu
+spring.datasource.password=MargaretThatcherIs110%Sexy
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/dib
-spring.datasource.username=root
-spring.datasource.password=P@ssw0rd
