--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.data.rest.basePath = /api/v1
 # Result data size
 spring.data.rest.default-page-size = 20
 
-# AWS EBS requires acrivity on Port 5000
+# AWS EBS requires activity on Port 5000
 server.port = 5000
 
 # Database info
