--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,8 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
     compile 'org.springframework.boot:spring-boot-starter-security'
     compile 'org.springframework.data:spring-data-rest-hal-browser'
-    compile 'mysql:mysql-connector-java'
+    compile 'com.h2database:h2'
+    // compile 'mysql:mysql-connector-java'
 	implementation('org.springframework.boot:spring-boot-starter')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
